- Tag: added operator== & operator!=
- ClientBase: added setCompression( bool ) to switch use of stream compression on/off

since -pre2
- renamed Stanza::show() --> Stanza::presence()
- RosterListener: moved Roster to gloox namespace
- RosterListener: new handleRosterPresence() replaces itemUn/Available() and presenceUpdated()
- RosterListener: added handleSelfPresence()


v0.8 -- 08 Apr 2006
-------------------
- added an extensible message session abstraction
- added automatic MessageSession creation facilities upon incoming messages
- JEP-0022 (Message Events)
- JEP-0047 (In-Band Bytestreams)
- JEP-0054 (vcard-temp)
- JEP-0085 (Chat State Notifications)
- 'ported' to Linux on Arm (Intel XScale on gumstix in this case)
- RosterManager: returning true from RosterListener::unsubscriptionRequest()
  makes the RosterManager no longer remove the item from the roster. It is
  unsubscribed from only. Use unsubscribe( jid, msg, true ) to remove it manually.
- RosterListener: renamed itemChanged() --> presenceUpdated()
- RosterListener: added nonrosterPresenceReceived()
- revamped logging system, introducing per-ClientBase log instance
- Tag: renamed addAttrib() --> addAttribute()
- RosterItem & RosterListener: more const & return values and parameters
- RosterItem: support for multiple resources, introducing RosterItem::Resource
- Stanza: added 'int priority()'
- renamed enum members from ALL_UPPER_CASE to MixedCase
- SASL EXTERNAL and support for client key/cert
- RosterManager: added RosterItem* getRosterItem( const JID& jid )
- added extern "C" const char* gloox_version()
- Tag: made findChild(...) return 0 instead of new Tag (reverted change from 0.7.6)
- Tag: added addAttribute( const std::string, int )
- revamped MessageSession to accept external MessageFilters
- Disco: added const StringList& features()
- allow for immediate re-connect() after disconnect()
- fixed compilation with gcc 4.1