@@ -15,6 +15,7 @@
 #include "chatstatehandler.h"
 #include "messageeventhandler.h"
 #include "messagesession.h"
+#include "stanza.h"
 
 namespace gloox
 {
