@@ -18,6 +18,7 @@
 #include "jid.h"
 
 #include <string>
+#include <list>
 
 namespace gloox
 {
@@ -219,7 +220,7 @@ namespace gloox
       void removeMessageFilter( MessageFilter *mf );
 
       // reimplemented from MessageHandler
-      virtual void handleMessage( Stanza *stanza );
+      virtual void handleMessage( Stanza *stanza, MessageSession *session = 0 );
 
     protected:
       /**
